<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="versus">V.S.</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="draw">Draw</string>
    <string name="computerWins">Computer wins!</string>
    <string name="youWin">You win!</string>
    <string name="show_history">Show History</string>
    <string name="delete_history">delete history</string>
    <string name="statistics_header">Your all time statistics</string>
</resources>
